--- a/SSL_Echo _Server/Client/Client.vcxproj
+++ b/SSL_Echo _Server/Client/Client.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="Client.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="targetver.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
