--- a/SSL_Echo _Server/SSL_SSP_DLL/SSL_SSP_DLL.vcxproj
+++ b/SSL_Echo _Server/SSL_SSP_DLL/SSL_SSP_DLL.vcxproj
@@ -88,6 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -140,6 +141,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="SSL_SSP_DLL.cpp" />
+    <ClCompile Include="stfafx.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="SSL_SSP.h" />
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="targetver.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
