Добавил немного сырого кода из Рихтера в клиент

--- a/SSL_Echo _Server/Client/Client.vcxproj
+++ b/SSL_Echo _Server/Client/Client.vcxproj
@@ -140,9 +140,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp" />
+    <ClCompile Include="ssl_channel.cpp" />
+    <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="transport.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ssl_channel.h" />
+    <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="transport.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
